syntax = "proto3";
package pt.ulisboa.tecnico.tuplespaces.contract.admin;

import "Common.proto";

message ActivateRequest {}

message ActivateResponse {
  bool previousState = 1;
}

message DeactivateRequest {}

message DeactivateResponse {
  bool previousState = 1;
}

message TupleSpacesStateRequest {}

message TupleSpacesStateResponse { TupleSpacesState state = 1; }

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc getTupleSpacesState(TupleSpacesStateRequest)
      returns (TupleSpacesStateResponse);
}